fix: height of image was too big

--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,7 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+
+.rendered {
+  max-height: 50vh;
+}
